--- a/scss/blocks/_sidebar.scss
+++ b/scss/blocks/_sidebar.scss
@@ -27,7 +27,10 @@
 	line-height: 14px;
 	color: var(--sidebar-color);
 	&:hover .custom-radio {
-		border-color: #2cacaf;
+		border-color: var(--accent-color);
+	}
+	&:hover .custom-checkbox {
+		border-color: var(--accent-color);
 	}
 }
 /******************************************************** RADIO **************************************/
@@ -48,7 +51,8 @@
 	width: 22px;
 	height: 22px;
 	border: 2px solid #d4d4d4;
-	border-radius: 4px;
+	border-radius: 5px;
+	backdrop-filter: blur(5px); /* применяем размытие к элементу */
 	margin-right: 10px;
 	position: relative;
 	transition: border-color 0.2s ease-in;
@@ -120,6 +124,7 @@
 	position: relative;
 	max-width: 263px;
 	width: 100%;
+	border-radius: 10px;
 	height: 100%;
 }
 .date-input {
@@ -127,7 +132,7 @@
 	border: 1px solid #d4d4d4;
 	border-radius: 8px;
 	padding: 12px 15px;
-	z-index: 5;
+	z-index: 6;
 	width: 100%;
 	box-sizing: border-box;
 	border-radius: 5px;
@@ -136,6 +141,12 @@
 .flatpickr-input[type='date']::-webkit-calendar-picker-indicator {
 	display: none;
 }
+input[type='date']::-webkit-calendar-picker-indicator {
+	opacity: 0;
+	visibility: hidden;
+}
+
+
 /* Скрыть иконку в элементе ввода даты (для большинства браузеров) */
 .flatpickr-input[type='date']::-webkit-inner-spin-button,
 .flatpickr-input[type='date']::-webkit-calendar-picker-indicator {
@@ -149,7 +160,7 @@
 /* Стили для кастомной иконки */
 .custom-icon {
 	position: absolute;
-	z-index: 1;
+	z-index: 5;
 	top: 20px;
 	right: 15px;
 	transform: translateY(-50%);
@@ -195,7 +206,7 @@
 }
 .sidebar__price-text:hover {
 	border-color: var(--accent-color);
-	color: var(--accent-color);
+	// color: var(--accent-color);
 }
 .sidebar__type-text {
 	padding: 15px 20px;
@@ -203,7 +214,7 @@
 .sidebar__price-text-out {
 	width: 148px;
 	z-index: 1;
-	margin-left: -20px;
+	// margin-left: -20px;
 }
 .sidebar__price-text.active-text {
 	background-color: var(--accent-color);
