--- a/css/style.css
+++ b/css/style.css
@@ -1474,8 +1474,6 @@ hr {
   padding: 10px 14px;
   border: 1px solid #d4d4d4;
   border-radius: 8px;
-  -webkit-backdrop-filter: blur(8px);
-          backdrop-filter: blur(8px); /* применяем размытие к элементу */
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -1498,8 +1496,6 @@ hr {
   height: 45px;
   border: 1px solid #d4d4d4;
   border-radius: 8px;
-  -webkit-backdrop-filter: blur(8px);
-          backdrop-filter: blur(8px); /* применяем размытие к элементу */
   outline: none;
   cursor: pointer;
   position: relative;
@@ -1541,8 +1537,6 @@ hr {
   border: 1px solid #d4d4d4;
   background-color: var(--bg-color);
   border-radius: 8px;
-  -webkit-backdrop-filter: blur(8px);
-          backdrop-filter: blur(8px); /* применяем размытие к элементу */
   max-width: 400px;
   width: 100%;
   position: absolute;
@@ -1556,6 +1550,7 @@ hr {
   padding-right: 8px;
   padding-bottom: 10px;
   padding: 15px 15px 15px 20px;
+  border-radius: 8px;
 }
 
 .object-select__item:hover {
@@ -1568,8 +1563,6 @@ hr {
   height: 45px;
   border: 1px solid #d4d4d4;
   border-radius: 8px;
-  -webkit-backdrop-filter: blur(8px);
-          backdrop-filter: blur(8px); /* применяем размытие к элементу */
   outline: none;
   cursor: pointer;
   padding-left: 20px;
@@ -1612,8 +1605,6 @@ hr {
   position: relative;
   overflow: hidden;
   border-radius: 8px;
-  -webkit-backdrop-filter: blur(8px);
-          backdrop-filter: blur(8px); /* применяем размытие к элементу */
 }
 .object-item-type__photo svg {
   width: 15px;
