--- a/scss/blocks/_form-object.scss
+++ b/scss/blocks/_form-object.scss
@@ -46,7 +46,7 @@
 	padding: 10px 14px;
 	border: 1px solid #d4d4d4;
 	border-radius: 8px;
-	backdrop-filter: blur(8px); /* применяем размытие к элементу */
+	
 	cursor: pointer;
 	transition: background-color 0.3s;
 }
@@ -69,7 +69,7 @@
 	height: 45px;
 	border: 1px solid #d4d4d4;
 	border-radius: 8px;
-	backdrop-filter: blur(8px); /* применяем размытие к элементу */
+	
 
 	outline: none;
 	cursor: pointer;
@@ -107,8 +107,7 @@
 	border: 1px solid #d4d4d4;
 	background-color: var(--bg-color);
 	border-radius: 8px;
-	backdrop-filter: blur(8px); /* применяем размытие к элементу */
-
+	// 
 	max-width: 400px;
 	width: 100%;
 	position: absolute;
@@ -122,6 +121,7 @@
 	padding-right: 8px;
 	padding-bottom: 10px;
 	padding: 15px 15px 15px 20px;
+	border-radius: 8px;
 }
 .object-select__item:hover {
 	background-color: var(--accent-color);
@@ -135,7 +135,7 @@
 	height: 45px;
 	border: 1px solid #d4d4d4;
 	border-radius: 8px;
-	backdrop-filter: blur(8px); /* применяем размытие к элементу */
+	
 
 	outline: none;
 	cursor: pointer;
@@ -172,7 +172,7 @@
 	position: relative;
 	overflow: hidden;
 	border-radius: 8px;
-	backdrop-filter: blur(8px); /* применяем размытие к элементу */
+	
 	svg {
 		width: 15px;
 		height: 15px;
