--- a/scss/blocks/_object.scss
+++ b/scss/blocks/_object.scss
@@ -12,7 +12,7 @@
 	display: flex;
 	align-items: center;
 	gap: 15px;
-	p {
+	a {
 		display: flex;
 		align-items: center;
 		gap: 7px;
@@ -75,6 +75,7 @@
 	padding: 21px 0;
 	color: #fff;
 	width: 100%;
+	text-align: center;
 }
 .sidebar-object__profile {
 }
@@ -95,6 +96,7 @@
 	.avatar {
 		width: 55px;
 		height: 55px;
+		border-radius: 50%;
 	}
 }
 .sidebar-profile__name {
@@ -102,6 +104,9 @@
 }
 .sidebar-profile__text {
 	margin-bottom: 10px;
+	display: flex;
+	align-items: center;
+	gap: 5px;
 }
 .sidebar-profile__user {
 	font-size: 20px;
@@ -125,7 +130,8 @@
 
 .catalog-item__item {
 	position: relative;
-	&:hover {
+	&:hover,
+	&:focus {
 		.text-hover {
 			transition: all 0.2s ease-in;
 			opacity: 1;
@@ -143,7 +149,8 @@
 	}
 	.catalog-item__item {
 		position: relative;
-		&:hover {
+		&:hover,
+		&:focus {
 			.text-hover {
 				transition: all 0.2s ease-in;
 				opacity: 1;
@@ -400,6 +407,7 @@
 	color: var(--title-color);
 }
 .rewiews__rate {
+	display: flex;
 }
 .rewiews__text {
 	max-width: 445px;
@@ -516,7 +524,7 @@
 		gap: 9px;
 	}
 	.vanilla-calendar-day__btn {
-		padding: 13px 17px;
+		padding: 8px 10px;
 		font-size: 14px;
 		max-width: 42px;
 	}
@@ -555,6 +563,7 @@
 	}
 	.vanilla-calendar-content {
 		display: block;
+		// max-width: 360px;
 	}
 	.vanilla-calendar-wrapper {
 		display: flex;
@@ -565,14 +574,20 @@
 		display: flex;
 		flex-direction: column;
 		gap: 10px;
+		margin-bottom: auto;
+		margin-top: 50px;
 	}
 	.calen-button {
 		max-width: 128px;
+		height: 44px;
 		width: 100%;
 		background-color: #f2f2f2;
 		color: #333333;
-		padding: 17px 35px;
+		padding: 16px 35px;
 		border-radius: 20px;
+	}
+	.unavailable-button {
+		padding: 16px 26px;
 	}
 	.calen-button.active {
 		background-color: #4d88df;
@@ -589,6 +604,9 @@
 }
 .complain-mobile {
 	display: none;
+}
+.paragraph-c {
+	position: absolute;
 }
 
 @media (max-width: 1367px) {
@@ -738,6 +756,7 @@
 		}
 		.calendar-inner-div {
 			flex-direction: row;
+			margin: 0;
 		}
 		.calen-button {
 			padding: 15px 25px;
@@ -820,6 +839,9 @@
 	}
 	.complain-mobile {
 		display: block;
+	}
+	.rewiews__title {
+		margin-bottom: 20px;
 	}
 }
 @media (max-width: 576px) {
