--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -8,6 +8,7 @@ body {
 	font-size: 14px;
 	line-height: 1;
 	color: var(--text-color);
+	background-color: var(--bg-color);
 }
 
 .container {
@@ -56,6 +57,6 @@ body {
 
 @media (max-width: 420px) {
 	.container {
-		max-width: 360px;
+		max-width: 380px;
 	}
 }
