Страница профиля редактирована2

--- a/css/style.css
+++ b/css/style.css
@@ -4065,7 +4065,7 @@ hr {
     padding: 15px;
   }
   .profile-object__button {
-    padding: 13px;
+    padding: 13px 10px;
   }
   .profile-object__bottom {
     background-color: #e0e0e0;
@@ -4305,6 +4305,13 @@ hr {
   .profile-loyalty__promo {
     order: -1;
     margin-bottom: 20px;
+  }
+  .profile-loyalty__promo .profile-settings__btn {
+    align-items: center;
+  }
+  .profile-loyalty__promo .profile-settings__btn span {
+    display: inline-block;
+    margin-right: 6px;
   }
   .profile-loyalty__items {
     flex-wrap: wrap;
