--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,10 @@ body {
   margin: 0 auto;
 }
 
+.container-home {
+  max-width: 1300px;
+}
+
 .container-fluid {
   max-width: 1440px;
   margin: 0 auto;
@@ -392,6 +396,920 @@ body {
   .main {
     padding-top: 30px;
     padding-bottom: 33px;
+  }
+}
+.section {
+  padding-bottom: 80px;
+}
+
+.section-block {
+  padding-bottom: 60px;
+}
+
+.home__inner {
+  border-radius: 30px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 40px 69px 40px 50px;
+  color: #fff;
+  height: 625px;
+  position: relative;
+  background-color: #d9d9d9;
+}
+.home__inner::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+  border-radius: 30px;
+}
+
+.home__top {
+  position: relative;
+  z-index: 2;
+}
+
+.home__title {
+  font-size: 83px;
+  font-weight: 700;
+  line-height: 78.85px;
+  letter-spacing: -0.08em;
+  text-transform: uppercase;
+  text-align: right;
+}
+.home__title span {
+  position: relative;
+  right: 281px;
+}
+
+.home__text {
+  font-size: 25px;
+  font-style: italic;
+  font-weight: 600;
+  line-height: 25px;
+  max-width: 261px;
+  text-wrap: balance;
+  position: absolute;
+  top: 15px;
+  right: 0;
+}
+
+.home__bottom {
+  margin-top: 190px;
+}
+.home__bottom-text {
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 22px;
+  margin-bottom: 25px;
+  max-width: 335px;
+  text-wrap: balance;
+}
+
+.home__link {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 12px;
+  padding: 30px 63px;
+  border-radius: 23px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  max-width: 327px;
+  position: relative;
+  z-index: 2;
+}
+.home__link.accent {
+  background-color: var(--accent-color);
+  color: #fff;
+}
+
+.advertising__inner {
+  display: flex;
+  gap: 20px;
+}
+
+.advertising__left {
+  background-color: #fff;
+  max-width: 628px;
+  padding: 40px 50px 46px 50px;
+  border-radius: 23px;
+}
+
+.advertising__texts {
+  font-size: 18px;
+  line-height: 19.8px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.advertising__right {
+  border-radius: 23px;
+  background-color: #fff;
+  max-width: 612px;
+  width: 100%;
+  padding: 20px 37px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.advertising__right img {
+  position: relative;
+  z-index: 2;
+}
+.advertising__right::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.25);
+  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.category__items {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.category__item {
+  display: flex;
+  max-width: 1260px;
+  width: 100%;
+}
+
+.category__title {
+  max-width: 344px;
+  text-wrap: balance;
+  margin-right: 58px;
+}
+.category__title span {
+  color: var(--accent-color);
+  display: block;
+}
+
+.title-page {
+  font-size: 45px;
+  font-weight: 600;
+  line-height: 42.75px;
+}
+
+.type-flex {
+  display: flex;
+  position: relative;
+}
+
+.item-type {
+  display: flex;
+  color: #fff;
+  border-radius: 23px;
+  overflow: hidden;
+  height: 262px;
+}
+.item-type.exchange {
+  background: radial-gradient(223.18% 138.94% at -60.79% 6.51%, #26a1a4 0%, #ffffff 100%);
+  width: 828px;
+}
+.item-type.exchange .item-type__right {
+  margin-left: 110px;
+}
+.item-type.exchange .item-type__right::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 15px;
+  width: 1px;
+  height: 230px;
+  background-color: #fff;
+}
+.item-type.visit {
+  background: radial-gradient(223.18% 138.94% at -60.79% 6.51%, #27ae60 0%, #ffffff 100%);
+  width: 1260px;
+}
+.item-type.rent {
+  background: radial-gradient(223.18% 138.94% at -60.79% 6.51%, #4d88df 0%, #ffffff 100%);
+  width: 1260px;
+}
+
+.item-type__left {
+  padding: 35px 0 35px 35px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.item-type__title {
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 33px;
+}
+
+.item-type__link {
+  display: inline-block;
+  font-weight: 500;
+  line-height: 7.14px;
+  letter-spacing: -0.02em;
+  background-color: #ff6e30;
+  width: 212px;
+  padding: 21px 0;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.item-type__right {
+  padding: 32px 50px 0 34px;
+  position: relative;
+  width: 470px;
+}
+.item-type__right img {
+  position: absolute;
+  bottom: 0;
+  right: 50px;
+}
+
+.item-type__top {
+  font-weight: 500;
+  line-height: 14px;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #fff;
+  margin-bottom: 20px;
+  display: inline-block;
+  text-align: center;
+}
+
+.item-type__text {
+  font-size: 18px;
+  line-height: 18px;
+  max-width: 224px;
+}
+
+.item-type__price {
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: -0.03em;
+  margin-top: 30px;
+}
+.item-type__price span {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 8.16px;
+  letter-spacing: -0.02em;
+}
+
+.item-type__right.center {
+  width: 440px;
+  position: relative;
+}
+.item-type__right.center::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 15px;
+  width: 1px;
+  height: 230px;
+  background-color: #fff;
+}
+.item-type__right.center::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 15px;
+  width: 1px;
+  height: 230px;
+  background-color: #fff;
+}
+.item-type__right.center .item-type__text {
+  max-width: 188px;
+}
+
+.steps {
+  background: #fff;
+  padding-top: 60px;
+}
+
+.steps__title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.steps__subtitle {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 19.8px;
+  max-width: 637px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.steps__list {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.steps__item {
+  background-color: #f7f7f7;
+  border-radius: 23px;
+  text-align: center;
+  padding: 19px 19px;
+  height: 160px;
+  color: #828282;
+  flex: 0 0 auto;
+}
+
+.steps__text {
+  margin-top: 14px;
+  max-width: 133px;
+}
+
+.steps__footer {
+  background-color: #f7f7f7;
+  border-radius: 20px;
+  max-width: 710px;
+  margin: 0 auto;
+  display: flex;
+  padding: 24px 25px 24px 30px;
+  position: relative;
+}
+
+.steps__footer-text {
+  max-width: 470px;
+  font-size: 16px;
+  line-height: 17.6px;
+  text-wrap: balance;
+}
+.steps__footer-text span {
+  color: var(--accent-color);
+}
+
+.steps__footer-img {
+  position: absolute;
+  right: 25px;
+  bottom: 0;
+}
+
+.steps__item:hover {
+  transition: all 0.3s ease-in;
+  background-color: var(--accent-color);
+  color: #fff;
+}
+.steps__item:hover svg {
+  transform: scale(1.3);
+}
+.steps__item:hover .svg-accent {
+  fill: #fff;
+  transition: all 0.2s ease-in;
+}
+.steps__item:hover .svg-white {
+  transition: all 0.2s ease-in;
+  fill: var(--accent-color);
+}
+
+.work {
+  padding-top: 80px;
+}
+
+.work__title {
+  margin-bottom: 40px;
+}
+
+.work__items {
+  display: flex;
+  gap: 16px;
+}
+
+.work__item {
+  padding: 24px 22px 24px 24px;
+  background-color: #fff;
+  border-radius: 23px;
+  max-width: 280px;
+  min-height: 283px;
+  display: flex;
+  flex-direction: column;
+}
+
+.work__number {
+  font-weight: 500;
+  color: var(--title-color);
+}
+
+.work__descr {
+  font-size: 16px;
+  line-height: 17.6px;
+  letter-spacing: -0.01em;
+  margin-top: auto;
+}
+
+.work__video {
+  max-width: 406px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  border-radius: 20px;
+  position: relative;
+  cursor: pointer;
+}
+
+.play {
+  width: 55px;
+  height: 55px;
+  display: inline-block;
+  margin: 0 auto;
+  background-color: rgba(34, 34, 34, 0.6);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  align-content: center;
+}
+.play svg {
+  position: relative;
+  top: 3px;
+  left: 1px;
+}
+
+.work__item:hover {
+  transition: all 0.2s ease-in;
+  background-color: var(--accent-color);
+  color: #fff;
+}
+.work__item:hover .work__number {
+  color: #fff;
+}
+
+.service__title {
+  margin-bottom: 40px;
+}
+
+.service__list {
+  display: flex;
+  gap: 11px;
+}
+
+.service__item {
+  background-image: url("./../assets/img/home/serv-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  border-radius: 20px;
+  padding: 22px;
+  display: flex;
+  flex-direction: column;
+  min-height: 204px;
+  flex: 0 0 auto;
+}
+
+.service__text {
+  max-width: 253px;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 15px;
+  text-wrap: balance;
+}
+.service__text-1 {
+  max-width: 196px;
+}
+.service__text-2 {
+  max-width: 224px;
+}
+.service__text-3 {
+  max-width: 167px;
+}
+.service__text-5 {
+  max-width: 160px;
+}
+
+.service__number {
+  margin-top: auto;
+}
+
+.cards__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px 10px;
+}
+
+.cards__item {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  max-width: 307px;
+}
+
+.card__img {
+  border-radius: 20px;
+}
+
+.card__text {
+  font-size: 16px;
+  color: #000000;
+}
+
+.card__link {
+  font-size: 16px;
+  color: var(--accent-color);
+}
+.card__link span {
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.home-main {
+  padding-top: 40px;
+}
+
+@media (max-width: 1367px) {
+  .home-main {
+    padding-top: 25px;
+  }
+  .home__title {
+    font-size: 70px;
+  }
+  .home__text {
+    font-size: 20px;
+  }
+  .home__bottom-text {
+    max-width: 285px;
+    font-size: 18px;
+    text-wrap: balance;
+  }
+  .home__link {
+    max-width: 283px;
+    font-size: 16px;
+    padding: 30px 50px;
+  }
+  .advertising__texts p {
+    font-size: 18px;
+    line-height: 19.8px;
+  }
+  .category__title {
+    margin-right: 88px;
+  }
+  .title-page {
+    font-size: 45px;
+    font-weight: 600;
+    line-height: 42.75px;
+  }
+  .item-type.exchange {
+    max-width: 729px;
+  }
+  .item-type.exchange .item-type__right {
+    margin-left: 35px;
+  }
+  .item-type__right.center {
+    margin-left: 35px;
+  }
+  .steps__item:hover svg {
+    transform: scale(1.1);
+  }
+  .steps__img {
+    max-width: 53px;
+    display: inline-block;
+    margin: 0 auto;
+  }
+  .work__item {
+    flex: 0 0 auto;
+    min-height: 264px;
+    max-width: 261px;
+  }
+  .work__item:first-child {
+    max-width: 229px;
+  }
+  .work__descr {
+    font-size: 15px;
+  }
+  .service__item {
+    padding: 20px;
+  }
+  .service__text {
+    font-size: 14px;
+    max-width: 233px;
+  }
+  .service__text-1 {
+    max-width: 181px;
+  }
+  .service__text-2 {
+    max-width: 207px;
+  }
+  .service__text-3 {
+    max-width: 154px;
+  }
+  .service__text-5 {
+    max-width: 147px;
+  }
+  .cards__list {
+    gap: 30px 9px;
+  }
+  .cards__item {
+    max-width: 283px;
+  }
+}
+@media (max-width: 1120px) {
+  .home-main {
+    padding-top: 42px;
+  }
+  .home__inner {
+    padding: 30px;
+    background-position: left;
+    display: flex;
+    flex-direction: column;
+  }
+  .home__title {
+    font-size: 48px;
+    line-height: 45.6px;
+    letter-spacing: -0.08em;
+  }
+  .home__title span {
+    right: 160px;
+  }
+  .home__text {
+    font-size: 14px;
+    line-height: 16px;
+    max-width: 148px;
+    top: 0;
+  }
+  .home__bottom {
+    margin-top: auto;
+  }
+  .advertising__inner {
+    flex-direction: column;
+    gap: 0;
+  }
+  .advertising__texts p {
+    font-size: 16px;
+  }
+  .advertising__right {
+    min-height: 382px;
+  }
+  .advertising__right::after {
+    background-position: bottom;
+  }
+  .advertising__left,
+  .advertising__right {
+    max-width: 770px;
+    width: 100%;
+  }
+  .category__title {
+    display: none;
+  }
+  .item-type.visit,
+  .item-type.rent {
+    flex-direction: column;
+  }
+  .item-type.visit .item-type__left,
+  .item-type.rent .item-type__left {
+    flex-direction: row;
+    margin-bottom: 15px;
+  }
+  .item-type.visit .item-type__right img,
+  .item-type.rent .item-type__right img {
+    width: 115px;
+    height: 155px;
+  }
+  .item-type.exchange .item-type__right::before {
+    display: none;
+  }
+  .item-type__right.center::after,
+  .item-type__right.center::before {
+    display: none;
+  }
+  .item-type__right,
+  .item-type__left {
+    padding: 0;
+  }
+  .title-page {
+    font-size: 45px;
+    font-weight: 600;
+    line-height: 42.75px;
+  }
+  .item-type {
+    padding: 25px 20px 31px 20px;
+  }
+  .item-type.exchange .item-type__right {
+    margin-left: 105px;
+  }
+  .item-type__right.center {
+    margin: 0;
+  }
+  .item-type__right img {
+    right: 0;
+  }
+  .item-type.exchange {
+    max-width: 768px;
+  }
+  .item-type__right,
+  .item-type__right.center {
+    width: 100%;
+  }
+  .type-flex {
+    gap: 80px;
+  }
+  .item-type__price {
+    margin-top: 15px;
+  }
+  .steps__item:hover svg {
+    transform: scale(1.1);
+  }
+  .steps__list {
+    flex-wrap: wrap;
+  }
+  .work__items {
+    flex-wrap: wrap;
+    gap: 8px;
+  }
+  .work__video {
+    height: 264px;
+    max-width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .service__list {
+    flex-wrap: wrap;
+    gap: 8px;
+  }
+  .service__item {
+    padding: 20px;
+  }
+  .service__item-1 {
+    flex-basis: 221px;
+  }
+  .service__item-2 {
+    flex-basis: 247px;
+  }
+  .service__item-3 {
+    flex-basis: 281px;
+  }
+  .service__item-4 {
+    flex-basis: 403px;
+  }
+  .service__item-5 {
+    flex-basis: 350px;
+  }
+  .service__text {
+    font-size: 14px;
+    max-width: 181px;
+  }
+  .cards__item {
+    max-width: 240px;
+  }
+}
+@media (max-width: 820px) {
+  .home__title {
+    font-size: 24px;
+    line-height: 22px;
+    text-align: left;
+    max-width: 153px;
+    letter-spacing: -0.08em;
+  }
+  .home__title span {
+    position: static;
+  }
+  .home__link {
+    max-width: 300px;
+  }
+  .advertising__texts p {
+    font-size: 14px;
+  }
+  .advertising__right {
+    min-height: 312px;
+    background-position: 2px bottom;
+  }
+  .item-type.exchange {
+    flex-direction: column;
+    max-width: 1260px;
+    width: 100%;
+  }
+  .item-type.exchange .item-type__left {
+    flex-direction: row;
+    margin-bottom: 20px;
+    gap: 55px;
+  }
+  .item-type.exchange .item-type__right {
+    margin-left: 0;
+  }
+  .item-type.exchange img {
+    width: 122px;
+    height: 169px;
+  }
+  .item-type__title {
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .item-type__text {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
+    max-width: 171px;
+  }
+  .item-type__price {
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: -0.03em;
+  }
+  .type-flex {
+    flex-direction: column;
+  }
+  .item-type {
+    height: 100%;
+  }
+  .item-type.visit .item-type__left,
+  .item-type.rent .item-type__left {
+    margin-bottom: 35px;
+  }
+  .title-page {
+    font-size: 20px;
+    line-height: 19px;
+  }
+  .steps__subtitle {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 15.4px;
+    max-width: 262px;
+  }
+  .steps__footer {
+    flex-direction: column;
+  }
+  .steps__footer-img {
+    position: static;
+    order: -1;
+    margin-bottom: 5px;
+  }
+  .work__video {
+    max-width: 167px;
+  }
+  .item-type__link {
+    width: 181px;
+  }
+  .type-flex {
+    gap: 40px;
+  }
+  .item-type__right.center .item-type__text {
+    max-width: 140px;
+  }
+  .item-type__right.center {
+    border-bottom: 1px solid #fff;
+    padding-bottom: 5px;
+  }
+  .steps__list {
+    align-items: center;
+  }
+  .steps__item {
+    padding: 15px 9px;
+    max-width: 110px;
+    height: auto;
+  }
+  .steps__list {
+    gap: 5px;
+  }
+  .steps__img {
+    max-width: 34px;
+  }
+  .steps__text {
+    font-size: 12px;
+  }
+  .work__items {
+    align-items: center;
+  }
+  .work__item,
+  .work__item:first-child {
+    max-width: 168px;
+  }
+  .work__descr {
+    font-size: 11px;
+  }
+  .service__list .service__item {
+    flex-basis: 165px;
+  }
+  .service__list .service__item-5 {
+    flex-basis: 340px;
+  }
+  .cards__item {
+    max-width: 165px;
+  }
+  .work__item {
+    padding: 15px;
+  }
+}
+@media (max-width: 567px) {
+  .item-type.exchange {
+    max-width: 340px;
   }
 }
 .sidebar {
