--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -16,6 +16,9 @@ body {
 	padding: 0 20px;
 	margin: 0 auto;
 }
+.container-home {
+	max-width: 1300px;
+}
 
 .container-fluid {
 	max-width: 1440px;
