--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
 	height: 100%;
 }
 
@@ -30,6 +31,14 @@ body {
 	overflow: hidden;
 }
 
+.title {
+	font-size: 35px;
+	font-weight: 600;
+	line-height: 28px;
+	color: var(--title-color);
+}
+
+
 @media (max-width: 1367px) {
 	.container {
 		max-width: 1200px;
@@ -50,6 +59,11 @@ body {
 	.container {
 		padding: 0 10px;
 		max-width: 660px;
+	}
+
+	.title {
+		font-size: 20px;
+		line-height: 20px;
 	}
 }
 @media (max-width: 576px) {
