--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,10 @@
 // pages Home
 @import './blocks/section';
 @import './blocks/home';
-
+@import './blocks/completing';
+@import './blocks/payment';
+@import './blocks/confirm';
+@import './blocks/verification';
 
 // object pages - new object pages - catalog pages
 @import './blocks/sidebar';
@@ -22,8 +25,13 @@
 @import './blocks/mobile-info';
 @import './blocks/form-object';
 @import './blocks/object';
+@import './blocks/user-page';
+@import './blocks/support';
+@import './blocks/reviews';
+@import './blocks/consultation';
+@import './blocks/base';
+@import './blocks/shares';
+@import './blocks/pay';
 
 // pages Profile
 @import './blocks/profile';
-
-
