--- a/css/chat.css
+++ b/css/chat.css
@@ -307,6 +307,12 @@ html {
   width: 100%;
   display: flex;
   flex-direction: column;
+  transition: all 0.3s ease-in;
+}
+
+.chat-content.closed {
+  transition: all 0.3s ease-in;
+  transform: translateX(-100vw);
 }
 
 .chat-content__head {
@@ -393,6 +399,9 @@ html {
   margin-right: auto;
   width: 100%;
   text-align: start;
+  align-self: flex-start;
+  display: flex;
+  justify-content: start;
 }
 .messages__left .message-text {
   background-color: #e0e0e0;
@@ -400,10 +409,11 @@ html {
 
 .message-text {
   padding: 16px 20px;
-  display: inline-block;
   gap: 15px;
-  border-radius: 100px;
+  border-radius: 20px;
   align-items: center;
+  display: flex;
+  max-width: 595px;
 }
 
 .messages__text {
@@ -417,12 +427,17 @@ html {
   color: #8f8f8f;
   display: inline-block;
   margin-left: auto;
+  flex-shrink: 0;
+  align-self: flex-end;
 }
 
 .messages__right {
   margin-left: auto;
   width: 100%;
   text-align: end;
+  align-self: flex-end;
+  display: flex;
+  justify-content: end;
 }
 .messages__right .message-text {
   background-color: rgba(44, 172, 175, 0.4);
@@ -500,7 +515,7 @@ html {
   position: absolute;
   z-index: 2;
   right: 17px;
-  top: 19px;
+  top: 12px;
 }
 
 .modal-wrapper {
@@ -752,6 +767,9 @@ html {
   }
   .modal__inner {
     gap: 14px;
+  }
+  .send {
+    top: 19px;
   }
 }
 @media (max-width: 670px) {
